; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_server.c_server_pool_each_calc_connections.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_server.c_server_pool_each_calc_connections.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.server_pool = type { i32, i32 }
%struct.context = type { i32 }

@NC_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @server_pool_each_calc_connections to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @server_pool_each_calc_connections(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.server_pool*, align 8
  %6 = alloca %struct.context*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.server_pool*
  store %struct.server_pool* %8, %struct.server_pool** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.context*
  store %struct.context* %10, %struct.context** %6, align 8
  %11 = load %struct.server_pool*, %struct.server_pool** %5, align 8
  %12 = getelementptr inbounds %struct.server_pool, %struct.server_pool* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.server_pool*, %struct.server_pool** %5, align 8
  %15 = getelementptr inbounds %struct.server_pool, %struct.server_pool* %14, i32 0, i32 1
  %16 = call i32 @array_n(i32* %15)
  %17 = mul nsw i32 %13, %16
  %18 = load %struct.context*, %struct.context** %6, align 8
  %19 = getelementptr inbounds %struct.context, %struct.context* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = add nsw i32 %20, %17
  store i32 %21, i32* %19, align 4
  %22 = load %struct.context*, %struct.context** %6, align 8
  %23 = getelementptr inbounds %struct.context, %struct.context* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %23, align 4
  %26 = load i32, i32* @NC_OK, align 4
  ret i32 %26
}

declare dso_local i32 @array_n(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
